Harshit | Fixed Age not showing up against woman name.

--- a/dristhi-app/assets/css/smart_registry/styles.css
+++ b/dristhi-app/assets/css/smart_registry/styles.css
@@ -213,7 +213,7 @@ a:focus {
 
 .client-name {
     font-size: 18px !important;
-    max-width: 67px;
+    max-width: 63px;
     display: inline-block;
 }
 
